<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/action_settings"
        android:id="@+id/settings_tf_label"
        android:textSize="@dimen/settings_label_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_text"
        android:id="@+id/settings_tf_currency"
        android:textSize="@dimen/settings_header_text_size" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="1"
        android:singleLine="true"
        android:id="@+id/autocomplete"
        android:maxLines="1"
        android:text="$" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourly_rate_text"
        android:id="@+id/settings_tf_hour_rate_label"
        android:textSize="@dimen/settings_header_text_size" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:ems="4"
        android:id="@+id/settings_tf_hour_rate_value"
        android:hint="40.00"
        android:textSize="@dimen/settings_common_text_size" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_before_text"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:id="@+id/settings_ch_sign_before"
        android:textSize="@dimen/settings_common_text_size"
        android:onClick="signBeforeClicked"
        android:checked="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$40.0"
        android:id="@+id/settings_tf_hour_rate_example"
        android:textSize="@dimen/settings_common_text_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="OK"
        android:id="@+id/ok_button"
        android:onClick="okClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/clear_all"
        android:id="@+id/button"
        android:layout_marginTop="10dp"
        android:onClick="clearAllSettings" />

</LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout4ads"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"></RelativeLayout>


</RelativeLayout>
